// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentDetailsTimeline renders correctly (with a mocked Timeline component) 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      <div>
        Mock timeline
      </div>
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders error 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      Timeline
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      Error while loading timeline
    </div>
  </div>
</div>
`;

exports[`PaymentDetailsTimeline renders loading 1`] = `
<div>
  <div
    class="components-card is-size-large css-1xs3c37-CardUI e1q7k77g0"
  >
    <div
      class="components-flex components-card__header is-size-large e1q7k77g1 css-1ufeymn-Flex-HeaderUI eboqfv50"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder"
      >
        Timeline
      </span>
    </div>
    <div
      class="components-card__body is-size-large css-xmjzce-BodyUI e1q7k77g3"
    >
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
      <span
        aria-busy="true"
        class="is-loadable-placeholder is-block"
      >
        <p
          style="line-height: 3;"
        >
          Block placeholder
        </p>
      </span>
    </div>
  </div>
</div>
`;
